--- a/book/14.md
+++ b/book/14.md
@@ -1,100 +1,107 @@
 # Kemampuan Akhir Yang Direncanakan
 
-- Peserta mampu membuat auth-guard
-- https://angular.io/api/router/CanActivate#description
+- Peserta mampu menambahkan check icon
 
-# Percobaan 13 membuat CanActive 
-- sejauh ini kita belum memberikan auth-guard untuk halaman apa saja.Sehingga user dapat mengakses halaman apa saja seperti contoh ketik alamat  **localhost:4200/check-out** maka web akan menampilkan halaman check out seperti pada gambar berikut:
-
-![](image/chapter2/img10.png)
-
-- untuk itu kita membutuhkan auth-guard 
-- langkah pertama yang harus dilakukan **menggenerate service** pada **terminal**
+# Percobaan membuat check icon
+- buka file **app.component.html** tambahkan code pengkondisian status complete
 
 ```
-ng g s auth-guard
-```
-- buka file **auth-guard.service.ts** dan rename nama classnya menjadi **AuthGuard** seperti pada code berikut:
+<tr *ngFor="let todo of todos">
+        <td>
+          <i class="fa fa-check-circle" aria-hidden="true" *ngIf="todo.complete"></i>
+          <i class="fa fa-circle-o" aria-hidden="true" *ngIf="!todo.complete"></i>
+        </td>
 
 ```
-import { Injectable } from '@angular/core';
 
-@Injectable({
-  providedIn: 'root'
-})
-export class AuthGuard {
-
-  constructor() { }
-}
+- sehingga code secara keseluruhan pada **app.component.html** seperti berikut
 
 ```
-- tambahkan pada **providers** pada **app.module.ts** **cat:pastikan ada import { AuthGuard } from './auth-guard.service';**
+<div class="container">
+  <div class="row"><h2 class="title">ToDO Application</h2></div>
 
+  <div class="row">
+    <form class="form-inline">
+      <div class="form-row">
+        <div class="col-md-5">
+          <input
+            type="text"
+            name="title"
+            [(ngModel)]="newTodo.title"
+            class="form-control"
+            placeholder="ToDo Title"
+            autocomplete="off"
+          />
+        </div>
+        <div class="col-md-5">
+          <!-- <input type="date" /> -->
+          <div class="form-group">
+            <div class="input-group">
+              <input
+                class="form-control"
+                placeholder="completion Date"
+                name="dp"
+                [(ngModel)]="newTodo.date"
+                ngbDatepicker
+                #d="ngbDatepicker"
+                autocomplete="off"
+              />
+              <div class="input-group-append">
+                <button
+                  class="btn btn-outline-secondary calendar"
+                  (click)="d.toggle()"
+                  type="button"
+                >
+                  <i class="fa fa-calendar" aria-hidden="true"></i>
+                </button>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-2">
+          <button class="btn btn-primary" (click)="addTodo()">Add</button>
+        </div>
+      </div>
+    </form>
+  </div>
+
+  <table class="table" *ngIf="todos.length > 0">
+    <thead>
+      <tr>
+        <th></th>
+        <th>Title</th>
+        <th>Date</th>
+        <th>Status</th>
+        <th>Options</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr *ngFor="let todo of todos">
+        <td>
+          <i class="fa fa-check-circle" aria-hidden="true" *ngIf="todo.complete"></i>
+          <i class="fa fa-circle-o" aria-hidden="true" *ngIf="!todo.complete"></i>
+        </td>
+        <td>{{ todo.title }}</td>
+        <td>{{ todo.date.day }}-{{ todo.date.month }}-{{ todo.date.year }}</td>
+        <td *ngIf="!todo.complete">not complete</td>
+        <td *ngIf="todo.complete">complete</td>
+        <td class="icons">
+          <button
+            class="btn btn-success"
+            (click)="completeTodo(todo)"
+            [disabled]="todo.complete"
+          >
+            <i class="fa fa-check"></i>
+          </button>
+          <button class="btn btn-primary"><i class="fa fa-pencil"></i></button>
+          <button class="btn btn-danger"><i class="fa fa-trash"></i></button>
+        </td>
+      </tr>
+    </tbody>
+  </table>
+</div>
 ```
-  providers: [
-    AuthService,
-    AuthGuard
-  ],
-```
 
-- buka file **auth-guard.service.ts** tambahkan beberapa code sehingga seperti dibawah ini 
+- jika benar maka yang berstatus complete maka akan tampil check circle sedangkan jika yang berstatus tidak complete maka akan muncul circle saja seperti pada gamabar berikut
 
-```
-import { Observable} from 'rxjs';
-import { AuthService } from './auth.service';
-import { Injectable } from '@angular/core';
-import { Router, RouterStateSnapshot,ActivatedRouteSnapshot,CanActivate} from '@angular/router';
-import { map } from 'rxjs/operators';
-
-@Injectable({
-  providedIn: 'root'
-})
-
-// @Injectable()
-export class AuthGuard implements CanActivate{
-
-  
-  constructor(private auth:AuthService,private router:Router) { }
-
-    canActivate(): Observable<boolean> | Promise<boolean> | boolean
-    {
-      return this.auth.user$.pipe(
-        map(user =>{
-          if (user){
-            return true;
-          } 
-          this.router.navigate(["/login"]);
-          return false;
-        })
-      );
-    }
-}
-```
-- tambahkan **canActive:[AuthGuard]** pada path di **app.module.ts**
-
-```
-{path:'check-out',component:CheckOutComponent, canActivate:[AuthGuard]},
-
-```
-- sehingga hasil codenya seperti berikut
-
-```
-RouterModule.forRoot(
-      [
-        {path:'',component:HomeComponent},
-        {path:'products',component:ProductsComponent},
-        {path:'shopping-chart',component:ShoppingChartComponent},
-        {path:'check-out',component:CheckOutComponent, canActivate:[AuthGuard]},
-        {path:'order-success',component:OrderSuccessComponent,canActivate:[AuthGuard]},
-        {path:'orders',component:MyOrdersComponent,canActivate:[AuthGuard]},
-        {path:'login',component:LoginComponent},
-        {path:'admin/admin-products',component:AdminProductsComponent,canActivate:[AuthGuard]},
-        {path:'admin/admin-orders',component:AdminOrdersComponent,canActivate:[AuthGuard]},
-        
-      ]
-    )
-```
-
-
-- jika berhasil maka saat ketik ketik **http://localhost:4200/check-out** maka akan kembali ke halaman login
-
+![](image/chapter1/img22.png)
