--- a/book/15.md
+++ b/book/15.md
@@ -1,106 +1,120 @@
 # Kemampuan Akhir Yang Direncanakan
 
-- Peserta mengetahui penggunaan localstorage pada angular
+- Peserta mampu membuat delete method di service Todo
 
-# Percobaan 14 LocalStorage
+# Percobaan membuat method delete
 
-- pada percobaan sebelum pada saat kita belum login kita ketik **localhost:4200/check-out** tidak bisa dikarenakan adanya auth guard sehingga user tidak bisa sembarangan masuk ke halaman lain sebelum login
-
-- pada percobaan berikut ini kita akan mencoba mengredirect user ke halaman yang telah diketikan saat sebelum login menggunakan **localstorage**
-
-- langkah pertama buka file **auth-guard.service.ts** dan rubah beberapa code sehingga menjadi seperti berikut:
+- buka file **todo-data.service.ts** buatlah method dengan nama delete
 
 ```
-import { Observable} from 'rxjs';
-import { AuthService } from './auth.service';
-import { Injectable } from '@angular/core';
-import { Router, RouterStateSnapshot,ActivatedRouteSnapshot,CanActivate} from '@angular/router';
-import { map } from 'rxjs/operators';
+
+deleteTodoById(id:number){
+    let todos = this.getAllTodos();
+    todos = todos.filter(todo => todo.id!==id);
+    this.setTodo(todos);
+  }
+
+```
+- sehingga code keseluruhan pada **todo-data.service.ts**
+
+```
+import { Injectable } from "@angular/core";
+import { Todo } from "../class/todo";
 
 @Injectable({
-  providedIn: 'root'
+  providedIn: "root"
 })
+export class TodoDataService {
+  lastid = 0;
+  todos: Todo[] = [];
 
-// @Injectable()
-export class AuthGuard implements CanActivate{
-
-  
-  constructor(private auth:AuthService,private router:Router) { }
-
-  // tambahkan parameter route,state:RouterStateSnapshot
-    canActivate(route,state:RouterStateSnapshot): Observable<boolean> | Promise<boolean> | boolean
-    {
-      return this.auth.user$.pipe(
-        map(user =>{
-          if (user){
-            return true;
-          } 
-          // tambahkan Sets query parameters to the URL.
-          this.router.navigate(["/login"],{queryParams:{returnUrl:state.url}});
-          return false;
-        })
-      );
+  constructor() {
+    const todos=this.getAllTodos();
+    if (todos.length===0){
+      this.lastid=0;
+    }else {
+      const maxId= todos[todos.length-1].id;
+      this.lastid = maxId+1;
     }
+  }
+
+  addTodos(todo: Todo): TodoDataService {
+    if (!todo.id) {
+      todo.id = ++this.lastid;
+    }
+    const todos = this.getAllTodos();
+    todos.push(todo);
+    //add code
+    this.setTodo(todos);
+    return this;
+  }
+
+  getAllTodos() {
+    const storageItem = JSON.parse(window.localStorage.getItem("app-todos"));
+    if (storageItem === null) {
+      return [];
+    } else {
+      return storageItem.todos;
+    }
+  }
+
+  getTodoById(id:number):Todo{
+    const todos=this.getAllTodos();
+    return todos.filter(todo=>todo.id===id).pop();
+  }
+
+  updateTodo(id:number,values:Object={}){
+    const todo=this.getTodoById(id);
+    if(!todo){
+      return null;
+    }
+    let todos = this.getAllTodos();
+    todos = todos.filter(t=>t.id !== todo.id);
+    const todoValues= Object.assign(todo,values);
+    todos.push(todoValues);
+    this.setTodo(todos);
+  }
+
+  compoleteTodo(todo:Todo){
+    const updateTodo= this.updateTodo(todo.id,{
+      complete:!todo.complete
+    });
+    return updateTodo;
+  }
+
+  deleteTodoById(id:number){
+    let todos = this.getAllTodos();
+    todos = todos.filter(todo => todo.id!==id);
+    this.setTodo(todos);
+  }
+
+  setTodo(usertodos: Todo[]) {
+    window.localStorage.setItem(
+      "app-todos",
+      JSON.stringify({ todos: usertodos })
+    );
+  }
 }
-```
-- jika benar ketik **localhost:4200/check-out** dengan kondosi belum login.Jika benar maka tampilannya akan seperti berikut
-
-![](image/chapter2/img11.png)
-
-- buka file **auth.service.ts** tambahkan beberapa code sehingga keseluruhan code seperti berikut
 
 ```
-import { Injectable } from '@angular/core';
-import { AngularFireAuth } from 'angularfire2/auth';
-import * as firebase from 'firebase';
-import { Observable } from 'rxjs/internal/Observable';
-import { ActivatedRoute } from '@angular/router';
-
-@Injectable({
-  providedIn: 'root'
-})
-export class AuthService {
-
-  user$:Observable<firebase.User>;
-  
-  //tambahkan parameter ActivedRoute
-  constructor(private afAuth:AngularFireAuth, private route :ActivatedRoute) {
-
-    this.user$= afAuth.authState;
-   }
-
-   // tambahakan property snapshot pada route dan property queryParamMap
-  login(){
-    let returnUrl=this.route.snapshot.queryParamMap.get('returnUrl')||'/';
-    localStorage.setItem('returnUrl',returnUrl);
-    this.afAuth.auth.signInWithRedirect(new firebase.auth.GoogleAuthProvider());
-  }
-
-  logout(){
-    this.afAuth.auth.signOut();
-  }
-}
+- buka file **app.component.html** dan tambahkan function click 
 
 ```
-
-- buka file **app.component.ts** tambahkan code berikut pada **class appcomponent**
+    <button class="btn btn-danger"><i class="fa fa-trash" (click)="deleteTod(todo)"></i></button>
+```
+- buka file **app.component.ts** tambahkan method deleteTodoById 
 
 ```
- constructor(private auth:AuthService,private router:Router){
-    auth.user$.subscribe(user=>{
-      if(user){
-        let returnUrl = localStorage.getItem('returnUrl');
-        router.navigateByUrl(returnUrl);
-      }
-    })
+deleteTod(todo){
+    this.todoService.deleteTodoById(todo.id);
   }
 ```
-- sehingga keseluruhan code **app.component.ts**
+- sehingga code keseluruhan pada **app.component.ts** sebagai berikut:
 
 ```
 import { Component } from '@angular/core';
-import { AuthService } from './auth.service';
-import { Router } from '@angular/router';
+import { Todo } from './class/todo';
+import { TodoDataService } from './services/todo-data.service';
 
 @Component({
   selector: 'app-root',
@@ -108,17 +122,36 @@ import { Router } from '@angular/router';
   styleUrls: ['./app.component.css']
 })
 export class AppComponent {
-  constructor(private auth:AuthService,router:Router){
-    auth.user$.subscribe(user=>{
-      if(user){
-        let returnUrl = localStorage.getItem('returnUrl');
-        router.navigateByUrl(returnUrl);
-      }
-    })
+
+  newTodo:Todo=new Todo();
+
+  constructor( private todoService:TodoDataService){}
+
+  get todos(){
+    return this.todoService.getAllTodos();
+  }
+
+  addTodo(){
+    // console.log(this.newTodo);
+    if(this.newTodo.title && this.newTodo.date){
+      this.todoService.addTodos(this.newTodo);
+      //cek isi new todo apakah berhasil
+      // console.log(this.newTodo);
+      this.newTodo= new Todo();
+      this.newTodo.title='';
+      this.newTodo.date='';
+    }
+  }
+
+  deleteTod(todo){
+    this.todoService.deleteTodoById(todo.id);
+  }
+
+  completeTodo(todo){
+    this.todoService.compoleteTodo(todo);
   }
 }
 
 ```
-- jika benar maka user akan diarahkan langsung kehalaman check-out setelah login **dengan syarat user harus mengetik localhost:4200/check-out dengan kondisi belum login**
-
-![](image/chapter2/img12.png)
+- jika berhasil maka data akan berhasil dihapus
+![](image/chapter1/img23.png)
